<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".OnboaredPage">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:id="@+id/onb_close"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_close" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/onboard_string"
                android:textAlignment="center"
                android:textColor="@color/app_ash3"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_on" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/onb_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:background="@drawable/rectangular_black"
            android:padding="5dp"
            android:text="@string/start_string"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/font_xl"
            android:textStyle="bold"
            app:backgroundTint="@null" />
    </LinearLayout>
</layout>